# cpp_assignment2

./: .gitignore  model.cpp  model.h
Draught/: CMakeCache.txt  CMakeLists.txt  Draught  Makefile  cmake_install.cmake
Draught/src/ncview/: game_window.cpp
Draughts/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Draughts  Makefile  README.txt  cmake_install.cmake
Draughts/src/model/: .model.cpp.swp  king.h  model.cpp  model.h  piece.cpp  piece.h  player.cpp  player.h
Draughts/src/ncview/: add_player_window.cpp  game_window.cpp  game_window.h
Draughts/src/tests/: .player_test.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  Piece_test  Player_test  Stoi_test  Unique_test  cmake_install.cmake  piece_test.cpp  player_test.cpp  unique_test.cpp
